# State_Budget_Analysis

./: .dockerignore  .env.example  .gitignore  Budget_analysis.ipynb  COLLEGEDUNIA_SCRAPING_REPORT.md  Dockerfile  ETL PIPELINE FOR BUDGET DATA DASHBOARD.docx  Haryana Time Series Analysis.xlsx  README.md  WARP.md  Web_scrapper.py  analyze_website.py  api_handler.py  app.py  backend_stderr.txt  cli.py  compose.yaml  conftest.py  current_response.html  data_loader.py  debug_pdf.py  docker-compose.prod.yaml  extract_tables.py  fixed_scraper.py  main.js  main.py  manage.sh  ml_analyzer.py  ml_insights.html  pyproject.toml  requirements.txt  robot.txt  sample_data.csv  sample_page.html  statistical_analyzer.py  statistics.html  styles.css  table_extractor.py  test_college_page.html  test_single_page.py  (+3 more)
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  auth.py  config.py  conftest.py  logging.py  main.py  pyproject.toml  requirements.txt  schemas.py  session.py  streaming.py  test_config.py  test_upstash_client.py
backend/agent/: analyst_agent.py  context.py  output_parser.py
budget_hry/: Final data sheet  (1).xlsx
docs/: AGENT_BEHAVIOR.md  API_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_SPEC.md  DataLens_AI_PRD_v2.docx  PRD.md  VISUAL_MOCKUP.md  WEBSOCKET_DEBUG.md  tasks.md  technical_documentation.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
public/: gemini_ai.html  index.html  overview.html  visualizations.html
src/: __init__.py  config.py  data_loader.py
tests/: test_analyzer.py
web scrapper/: Web_scrapper.py  debug_scraper.py  sample_page.html
(+123 files in other folders)
